fix overflowing in fixed layouts

--- a/src/layouts/FixedLeft/style.scss
+++ b/src/layouts/FixedLeft/style.scss
@@ -13,7 +13,7 @@
   height: 100%;
   min-height: 100%;
   overflow-y: scroll;
-  z-index: 10;
+  z-index: 20;
   &::-webkit-scrollbar { width: 0 !important }
 }
 
@@ -24,9 +24,11 @@
   box-sizing: border-box;
   min-height: 100%;
   background: $cBackground;
+  overflow: auto;
   .stub {
     visibility: hidden;
     opacity: 0;
+    flex: none;
   }
   .content {
     box-sizing: border-box;
