--- a/src/layouts/FixedRight/style.scss
+++ b/src/layouts/FixedRight/style.scss
@@ -27,9 +27,11 @@
   box-sizing: border-box;
   min-height: 100%;
   width: 100%;
+  overflow: auto;
   .stub {
     visibility: hidden;
     opacity: 0;
+    flex: none;
   }
   .content {
     box-sizing: border-box;
